# python.cz

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CNAME  Dockerfile  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  app.py  english.html  events.ics  events.py  events_feeds.yml  footer-en.html  ga.html  ideas.txt  index-en.html  index.html  main.css  mkdocs.yml  pyladies.html  pyproject.toml  requirements.txt  runserver.py  setup.cfg  setup.py  text.html  text.md  twitter-bot.txt  web.py
.c9revisions/: index.html.c9save
.c9revisions/css/: main.css.c9save
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  main.yml
akce/: index.html
css/: main.css  pyladies.css
deployment/: README.md  deploy.sh  id_rsa_pyvec_deployment.enc  update.sh
docs/: akce.md  en.md  index.md  prace.md  zacatecnici.md  zapojse.md
docs/css/: extra.css
en/: index.html
en/events/: index.html
en/jobs/: index.html
files/data/: friends.geojson  jobs.geojson  meetups.geojson
files/js/: maps.js
hooks/: events.py  on_page_markdown.py  on_post_build.py  on_pre_build.py
identity/: logo-czech-python.xcf  logo-pyvo.xcf
identity/brno/: fb-generator.xcf  fb-generator2.xcf  fb-generator3.xcf  welcome-2012.odp  welcome-emergency.odp  welcome-en.odp
identity/ostrava/: letak.odt  logo-src.xcf  welcome.odp
js/: main.js
overrides/: main.html
overrides/partials/: copyright.html
pages/: get_involved.html  index-en.html  index.html  jobs-en.html  jobs.html
pages/fragments/: footer-en.html  footer.html  head.html
prace/: index.html
pyladies/: index.html
pyladies/s001-install/: index.html
pyladies/s002-hello-world/: index.html
pyladies/s003-looping/: index.html
pyladies/s004-strings/: index.html
pyladies/s005-modules/: index.html
pyladies/s006-lists/: index.html
pyladies/s007-cards/: index.html
pyladies/s008-cards2/: index.html
pyladies/s009-git/: index.html
pyladies/s010-data/: index.html
pyladies/s011-dicts/: index.html
pythoncz/: __init__.py  __main__.py  app.py  business.py  cli.py  config.py  cs_sort.py  photos.py  views.py
pythoncz/models/: business.py  (+9 more)
pythoncz_tests/: __init__.py  views_test.py
talks/: brno-welcome.odp
templates/: english.html  index.html
tests/: __init__.py  geojson_europe_test.py  helpers.py  valid_json_test.py  valid_yaml_test.py  views_test.py
torrents/: 2013-01-brnenske-pyvo-api-nejen-pro-mobily.torrent  2013-04-brnenske-pyvo-brug-verzovaci-systemy.torrent  2013-06-brnenske-pyvo-brug-letni-vsehochut.torrent  2013-07-brnenske-pyvo-brug-ve-3d.torrent  2013-11-ostravske-pyvo-prvni.torrent  index.html
web/: __init__.py  views.py
zacatecnici/: index.html
zapojse/: index.html
(+68 files in other folders)
